Updated Parser, SymbolTable. New interpreter and test